# powdr-brainfuck

./: README.md  bf_to_powdr.py  brainfuck.asm  brainfuck_template.asm  brainfuck_vm.asm  program_formatter.py  rot13.bf  rot13.in  rot13_for_compiled.in  rot13_simple.in
brainfuck-rs/: .vimrc  Cargo.toml
brainfuck-rs/host/: Cargo.toml
brainfuck-rs/host/src/: main.rs
brainfuck-rs/interpreter/: Cargo.toml
brainfuck-rs/interpreter/src/: lib.rs
brainfuck-rs/powdr-guest/: Cargo.toml
brainfuck-rs/powdr-guest/src/: lib.rs  main.rs
